--- a/h04/index.css
+++ b/h04/index.css
@@ -1,9 +1,7 @@
 body {
     margin:0;
     font-family: arial;
-}
-header {
-
+    height:100%;
 }
 nav {
     background-color:black;
@@ -27,8 +25,8 @@ footer {
     padding:20px;
     color:white;
     position: fixed;
-    margin-top:100%;
     width:100%;
+    bottom:0%;
 }
 footer p {
     text-align:right;
