--- a/h07/index.css
+++ b/h07/index.css
@@ -33,6 +33,7 @@ section article h1 {
     margin-left:50px;
 }
 
+/* phone */
 @media all and (max-width: 724px) {
     nav {
         margin:0;
@@ -65,6 +66,18 @@ section article h1 {
         margin-left:5px;
     }
     article {
+        margin-left:5px;
+    }
+}
+/* tablet */
+@media all and (max-width:1050px) {
+    .main {
+        display:grid;
+        grid-template-areas:
+        'menu main main'
+        'menu main main';
+    }
+    .news {
         margin-left:5px;
     }
 }
